Bug 1253446 - patch 2 - Return the proper scaling factor when querying the primary screen on Windows. r=emk